<resources>
    <string name="app_name">Yummy!</string>
    <string name="navHome">Home</string>
    <string name="navSearch">Search</string>
    <string name="navFavorites">Favorites</string>
    <string name="navAccount">Account</string>
    <string name="Password">Password</string>
    <string name="Sign_Up">Sign Up</string>
    <string name="Phone_Number">Phone Number</string>
    <string name="Username">Username</string>
    <string name="Login">Login</string>
    <string name="google_android_map_api_key">AIzaSyAlZLw6HQCivOjybg1phcoBTKH3vZ80t08</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \\\'my location\\\' layer.</string>
    <string name="permission_required_toast">Location permission is required</string>
    <string name="permission_rationale_location">Access to the location service is required</string>
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="option_get_place">Get place</string>
    <string name="pick_place">Choose a place</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="select">Select</string>
    <string name="name_of_category">Name of Category</string>
    <string name="categorytitle">CategoryTitle</string>
    <string name="home">Home</string>
    <string name="map">Map</string>
    <string name="favorites">Favorites</string>
    <string name="logout">Logout</string>
    <string name="Redirect">Redirecting…</string>
    <string name="LoggedIn">Logged in</string>
    <string name="WrongCredentials">Wrong Credentials</string>
    <string name="UserCreated">User Created and logged in</string>
    <string name="FiledsFilledIn">Make sure fields are filled in</string>
    <string name="UserCredExist">User Credentials exist already</string>
    <string name="FingerFoods">Finger Foods</string>
    <string name="Traditional">Traditional</string>
    <string name="Chinese">Chinese</string>
    <string name="Fish">Fish</string>
    <string name="Pizza">Pizza</string>
    <string name="Vegetarian">Vegetarian</string>
    <string name="Pasta">Pasta</string>
    <string name="ReallyExit">Really Exit?</string>
    <string name="ExitSure">Are you sure you want to exit?</string>
    <string name="NoExit">No</string>
    <string name="YesExit">Yes</string>
    <string name="restaurants">Show Restaurants</string>
    <string name="PermissionDenied">Permission Denied</string>
    <string name="NearbyRestaurants">Showing Nearby Restaurants</string>
    <string name="favorite">Favorite</string>
    <string name="categorythumbnail">category picture</string>
    <string name="favoriteSaved">Favorite saved</string>
    <string name="favoriteDeleted">Favorite deleted</string>
</resources>
